--- a/mission-planning-dashboard/src/app/app.component.html
+++ b/mission-planning-dashboard/src/app/app.component.html
@@ -1,3 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
-<app-crew></app-crew>
+<div class="box">
+   <app-crew></app-crew>
+   <app-equipment></app-equipment>
+   <app-experiments></app-experiments>
+</div>
